--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -11,16 +11,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_TOKEN }}
-
-      - name: Build and push
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/shopifly:latest
+      - name: Build and push to ECR
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        run: |
+          aws ecr get-login-password --region eu-west-1 | docker login --username AWS --password-stdin 244530008913.dkr.ecr.eu-west-1.amazonaws.com
+          rev=$(git rev-parse --short HEAD)
+          docker build . -t docker-image
+          docker tag docker-image 244530008913.dkr.ecr.eu-west-1.amazonaws.com/${{ secrets.AWS_ECR_REPO }}:$rev
+          docker push 244530008913.dkr.ecr.eu-west-1.amazonaws.com/${{ secrets.AWS_ECR_REPO }}:$rev
+          docker tag docker-image 244530008913.dkr.ecr.eu-west-1.amazonaws.com/${{ secrets.AWS_ECR_REPO }}:latest
+          docker push 244530008913.dkr.ecr.eu-west-1.amazonaws.com/${{ secrets.AWS_ECR_REPO }}:latest
