Changed dashboard type. added dashboard for latency

--- a/.github/workflows/cloudwatch_dashboard.yml
+++ b/.github/workflows/cloudwatch_dashboard.yml
@@ -4,14 +4,11 @@ defaults:
     working-directory: infra
 on:
   pull_request:
-    branches:
-     - 'main'
+    branches: [ main ]
   push:
-    branches:
-     - 'main'
+    branches: [ main ]
   workflow_dispatch:
-    branches:
-     - 'main'
+    branches: [ main ]
 
 jobs:
   terraform:
